# external-data-analysis

./: README.md  build_uniprot_to_irgsp_map.py  requirements.txt
aranet/: parseFile.py  scorings.py
comparaBackup/slice_14/: ensembl_genomes_29_os_2_at_sorted.tab  ensembl_genomes_29_os_2_bd_sorted.tab  ensembl_genomes_29_os_2_bo_sorted.tab  ensembl_genomes_29_os_2_br_sorted.tab  ensembl_genomes_29_os_2_oba_sorted.tab  ensembl_genomes_29_os_2_ogla_sorted.tab  ensembl_genomes_29_os_2_oglu_sorted.tab  ensembl_genomes_29_os_2_olu_sorted.tab  ensembl_genomes_29_os_2_ome_sorted.tab  ensembl_genomes_29_os_2_on_sorted.tab  ensembl_genomes_29_os_2_op_sorted.tab  ensembl_genomes_29_os_2_or_sorted.tab  ensembl_genomes_29_os_2_pp_sorted.tab  ensembl_genomes_29_os_2_pt_sorted.tab  ensembl_genomes_29_os_2_sl_sorted.tab  ensembl_genomes_29_os_2_sm_sorted.tab  ensembl_genomes_29_os_2_vv_sorted.tab  ensembl_genomes_32_os_2_bv_sorted.tab  (+1 more)
comparaData/: fnames  lc.py  lc_V2.py  lineDiff.py  lineTotals14  lineTotals15  orthCountDiff
differential_expression_stats/: DiffX_abiotic_cluster.py  diffX_cluster.py
gramene/: LICENSE  README.md  setup.cfg  setup.py.old
gramene/gramene/: client.py  data.py  orthology.py  schema.py
gramene/gramene.egg-info/: PKG-INFO  SOURCES.txt
orthology_stats/: TODO.md  cli.py  orthology_data_grabber.py  orthology_rebuilder.py  species_list.py  template.py  termpath_list_builder.py  testcase.py
projected_mappings/: fnames  lc_V2.py  mapCountDiff.tab  mapCounts.py  runCounts  slice_14_geneCounts.tab  slice_15_geneCounts.tab
(+210 files in other folders)
