[metadata]
name = gramene
version = 0.0.1
url = https://github.com/AmiGanguli/external-data-analysis
author = Ami Ganguli
author_email = ami.ganguli@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Tools for working with Gramene metabolic pathway data.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6

